input output property

--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-content></app-content>
+<hr>
+<app-content [inputValue]="someValue" (newEvent)="onButtonClickChildComponene($event)" ></app-content>
+<hr>
 <app-footer></app-footer>
