--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,1 +1,5 @@
-<p>content works!</p>
+<h2 [innerText]="getTitle()" ></h2>
+<h1 class="inputValue" [innerText]="inputValue"></h1>
+<hr>
+<p [innerHTML]="count"></p>
+<button (click)="onClick()">Click</button>
