--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="topnav">
   <a class="active" >Home</a>
-  <a >News</a>
+  <a routerLink="/recipes" >Recipes</a>
   <a >Contact</a>
   <a >About</a>
   <a class="split" routerLink="/" >Logout</a>
